Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,7 +23,7 @@ steps:
 - task: RunFromFileSystemTask@5
   inputs:
     testPathInput: 'd:\demo\demo'
-    uploadArtifact: 'yes'
+    uploadArtifact: 'no'
     mcAuthType: 'basic'
 
   
