Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,10 +23,11 @@ steps:
 - task: RunFromFileSystemTask@5
   inputs:
     testPathInput: 'd:\demo\demo'
+    testPathInput: 'd:\demo\demo'
     uploadArtifact: 'no'
     mcAuthType: 'basic'
 
-  
+
 
 # JOB UFT/ALM Reporte 
 - task: PublishTestResults@2
