Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,6 +25,7 @@ steps:
   inputs:
     testPathInput: |
       d:\demo\demo
+      d:\demo\demo
     uploadArtifact: 'no'
     mcAuthType: 'basic'
 
