--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,4 +38,10 @@ steps:
     searchFolder: 'C:\UFT_Launcher\UFT\UFTWorking\res\Report_$(Build.BuildNumber)'
     testRunTitle: '$(System.DefinitionName)_$(Build.BuildNumber)'
 
+- task: PublishReleaseArtifact@1
+  inputs:
+    artifactPath: '$(Build.SourcesDirectory)\demo\demo_1\Report1'
 
+- task: PublishReleaseArtifact@1
+  inputs:
+    artifactPath: '$(Build.SourcesDirectory)\demo\demo_2\Report1'
