--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -56,4 +56,8 @@ steps:
 
 - task: PublishReleaseArtifact@1
   inputs:
-    artifactPath: 'd:\demo\demo1'
+    artifactPath: 'd:\demo\demo_1\Report1'
+
+- task: PublishReleaseArtifact@1
+  inputs:
+    artifactPath: 'd:\demo\demo_2\Report1'
