--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -17,3 +17,9 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- task: VSBuild@1
+  inputs:
+    solution: '**\UftDeveloperTestProject1\*.sln'
+    platform: 'x64'
+    configuration: 'release'
