--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,9 @@ steps:
   inputs:
     artifactPath: '$(Build.SourcesDirectory)\demo\demo_2\Report1'
 
-- task: PublishHtmlReport@1
-  inputs:
-    reportDir: '$(Build.SourcesDirectory)\demo\demo_1\Report1\run_results.html'
 
+
+- task: publishhtmlreport@1
+  inputs:
+    htmlType: 'genericHTML'
+    htmlPath: '$(Build.SourcesDirectory)\demo\demo_1\Report1\run_results.html'
