Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,3 +46,8 @@ steps:
   inputs:
     artifactPath: '$(Build.SourcesDirectory)\demo\demo_2\Report1'
 
+- task: PublishHtmlReport@1
+  inputs:
+    reportDir: '$(Build.SourcesDirectory)\demo\demo_2\Report1'
+
+
