Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,6 @@ steps:
 
 
 
+- task: PublishHtmlReport@1
+  inputs:
+    reportDir: '$(Build.SourcesDirectory)\demo\demo_2\Report1\run_result.html'
