Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,4 +51,4 @@ steps:
 
 - task: PublishHtmlReport@1
   inputs:
-    reportDir: '$(Build.SourcesDirectory)\demo\demo_2\Report1\run_result.html'
+    reportDir: '$(Build.SourcesDirectory)\demo\demo_2\Report1\run_results.html'
