--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -23,8 +23,8 @@ steps:
 
 - task: RunFromFileSystemTask@5
   inputs:
-    testPathInput: |
-      $(Build.SourcesDirectory)\demo\ADOIntegrationTest
+    testPathInput: '$(Build.SourcesDirectory)\demo\ADOIntegrationTest'
+    cancelRunOnFailure: false
     uploadArtifact: 'no'
     mcAuthType: 'basic'
 
